Allow to link as dynamic library (#2145)
* Bootstrap support for building shared library in config
* Allow linking to shared library
* Add shared library scripted test
* Add compile time checks and tests
* Sync Scala 3 compiler plugin with Scala 2
* Generate dllexport modifiers for exported symbols on Windows
* Generate gxx personality for externs
* Restrict generation of dllexport only to Sig.Extern names
* Check if new compilation flags fix exception on mac
* Add mixxing isMac method in scirpted Platform
* Generate dylib constructor to init ScalaNative
* Set lib prefix for library outputs
* Allow to produce static libraries
* Build static library using llvm-ar directly
* Don't allow to generate '.ll' file with empty basename
* Upgrade al-cheb/configure-pagefile-action to remove CI warnings
Co-authored-by: adampauls <adpauls@microsoft.com>

(cherry picked from commit a4df2de8ba51b5f64b80e556ae851c8c36824a56)

--- a/.github/workflows/run-tests-macos.yml
+++ b/.github/workflows/run-tests-macos.yml
@@ -5,10 +5,10 @@ on:
   push:
     branches:
       - main
-concurrency: 
+      - 0.4.x
+concurrency:
   group: macOS-${{ github.head_ref }}
   cancel-in-progress: true
-
 
 jobs:
   run-tests:
@@ -63,4 +63,6 @@ jobs:
           scala-version: ${{matrix.scala}}
 
       - name: Test scripted
-        run: sbt "test-scripted ${{matrix.scala}}"
+        run: |
+          export LLVM_BIN=$(brew --prefix llvm@14)/bin
+          sbt "test-scripted ${{matrix.scala}}"
