--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -79,7 +79,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [linux-arm64, linux-x86]
-        scala: [2.13.10, 3.2.1]
+        scala: [3.2.1]
         build-mode: [debug, release-fast]
         lto: [none, thin]
         gc: [boehm, immix, commix]
@@ -99,8 +99,6 @@ jobs:
             lto: none
           - gc: immix
             build-mode: debug
-          - gc: immix
-            scala: 2.13.10
           - gc: commix
             lto: none
           - gc: commix
