--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1, 2.13.10, 2.12.17, 2.11.12]
+        scala: [3.2.1]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
@@ -63,28 +63,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1, 2.13.10]
+        scala: [3.2.1]
         build-mode: [debug, release-fast]
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
-        exclude:
-          - scala: 2.13.10
-            build-mode: debug
-            gc: immix
-        include:
-          - scala: 2.11.12
-            build-mode: debug
-            gc: immix
-          - scala: 2.11.12
-            build-mode: release-fast
-            gc: commix
-          - scala: 2.12.17
-            build-mode: debug
-            gc: immix
-          - scala: 2.12.17
-            build-mode: release-fast
-            gc: commix
           - scala: 3.1.3
             build-mode: debug
             gc: immix
@@ -113,11 +96,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1, 2.13.10]
+        scala: [3.2.1]
         build-mode: [debug]
-        include:
-          - scala: 2.13.10
-            build-mode: release-fast
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
@@ -138,14 +118,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1, 2.13.10]
+        scala: [3.2.1]
         lto: [thin]
         optimize: [true]
         include:
           # LTO full fails with 3.1 in the CI - we were not able to reproduce it locally
-          - scala: 2.13.10
-            lto: full
-            optimize: true
           - scala: 3.2.1
             lto: full
             optimize: false
@@ -172,7 +149,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.12.17, 3.1.3]
+        scala: [3.1.3]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
