--- a/.github/workflows/run-tests-macos.yml
+++ b/.github/workflows/run-tests-macos.yml
@@ -17,15 +17,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1, 2.13.10, 2.12.17, 2.11.12]
+        scala: [3.2.1]
         gc: [immix]
         include:
-          - scala: 2.13.10
-            gc: commix
-          - scala: 2.12.17
-            gc: boehm
-          - scala: 2.11.12
-            gc: none
           - scala: 3.1.3
             gc: immix
 
@@ -55,7 +49,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.12.17, 3.1.3]
+        scala: [3.1.3]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/macos-setup-env
