--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -18,19 +18,9 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [3.2.1, 2.13.10]
+        scala: [3.2.1]
         gc: [boehm, immix, commix]
         include:
-          - scala: 2.11.12
-            gc: immix
-          - scala: 2.11.12
-            gc: commix
-          - scala: 2.12.17
-            gc: immix
-          - scala: 2.12.17
-            gc: commix
-          - scala: 2.13.10
-            gc: none
           - scala: 3.1.3
             gc: immix
     steps:
@@ -80,7 +70,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [2.12.17, 3.1.3]
+        scala: [3.1.3]
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
@@ -100,7 +90,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1, 2.13.10]
+        scala: [3.2.1]
         build-mode: [release-fast]
         lto: [thin]
         optimize: [true]
@@ -108,12 +98,6 @@ jobs:
           - scala: 3.2.1
             lto: full
             optimize: true
-          - scala: 2.13.10
-            lto: full
-            optimize: true
-          - scala: 2.12.17
-            lto: full
-            optimize: false
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
