--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -4,8 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - main
-      - 0.4.x
+      - dotty-experimental
 concurrency:
   group: linux-multiarch-${{ github.head_ref }}
   cancel-in-progress: true
@@ -79,7 +78,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: [linux-arm64, linux-x86]
-        scala: [3.2.1]
+        scala: [3, "3-next"]
         build-mode: [debug, release-fast]
         lto: [none, thin]
         gc: [boehm, immix, commix]
@@ -169,15 +168,6 @@ jobs:
             echo set-native-config=${SetConfigTemplate} >> $GITHUB_ENV
           fi
 
-      # Conditionally disable some of the tests (Scala 2 only)
-      - name: Set filters for partests
-        shell: bash
-        if: ${{ !startsWith(matrix.scala, '3.') }}
-        run: |
-          ignoredTestsFile=scala-partest-junit-tests/src/test/resources/${{matrix.scala}}/BlacklistedTests.txt
-          echo "" >> ${ignoredTestsFile}
-          echo -e "scala/util/SortingTest.scala\n" >> ${ignoredTestsFile}
-
       - name: Run tests
         env:
           SCALANATIVE_MODE: "${{matrix.build-mode}}"
@@ -204,4 +194,4 @@ jobs:
           timeout_minutes: 180
           max_attempts: 2
           retry_on: error
-          command: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}:${{ matrix.arch }}" ${{ matrix.scala }} ${{env.project-version}}
+          command: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}:${{ matrix.arch }}"
