--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -4,8 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - main
-      - 0.4.x
+      - dotty-experimental
 concurrency:
   group: linux-${{ github.head_ref }}
   cancel-in-progress: true
@@ -20,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1]
+        scala: [3, "3-next"]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
@@ -28,31 +27,7 @@ jobs:
           scala-version: ${{matrix.scala}}
 
       - name: Test tools
-        run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" "test-tools ${{ matrix.scala }}"
-
-        # Make sure that Scala partest blacklisted tests contain only valid test names
-      - name: Setup Scala-cli
-        uses: VirtusLab/scala-cli-setup@v0.1
-
-      - name: Check partest disabled tests list
-        # No partests support for Scala 3
-        if: ${{ !startsWith(matrix.scala, '3.') }}
-        run: |
-          sbt "++ ${{ matrix.scala }} -v" \
-          "-no-colors" \
-          "scalaPartest${{env.project-version}}/fetchScalaSource"
-          scala-cli scripts/partest-check-files.scala -- ${{ matrix.scala }}
-
-        # Running all partests would take ~2h for each Scala version, run only single test of each kind
-        # to make sure that infrastructure works correctly.
-      - name: Run subset of partest tests
-        # No partests support for Scala 3
-        if: ${{ !startsWith(matrix.scala, '3.') }}
-        run: |
-          sbt "++ ${{ matrix.scala }} -v" \
-          "-no-colors" \
-          "-J-Xmx3G" \
-          "scalaPartestTests${{env.project-version}}/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
+        run: sbt "-no-colors" "-J-Xmx3G" "test-tools ${{ matrix.scala }}"
 
   #Main tests grid. Builds and runs tests agains multiple combination of GC, Build mode and Scala Version
   #It can be extended to test against different OS and Arch settings
@@ -63,15 +38,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1]
+        scala: [3, "3-next"]
         build-mode: [debug, release-fast]
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
-          - scala: 3.1.3
+        exclude:
+          - scala: 3
             build-mode: debug
             gc: immix
-          - scala: 3.1.3
+          - scala: 3
             build-mode: release-fast
             gc: commix
     steps:
@@ -96,7 +72,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1]
+        scala: [3, "3-next"]
         build-mode: [debug]
     steps:
       - uses: actions/checkout@v3
@@ -118,7 +94,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1]
+        scala: [3, "3-next"]
         lto: [thin]
         optimize: [true]
         include:
@@ -149,7 +125,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3]
+        scala: [3, "3-next"]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
