--- a/.github/workflows/run-tests-macos.yml
+++ b/.github/workflows/run-tests-macos.yml
@@ -4,8 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - main
-      - 0.4.x
+      - dotty-experimental
 concurrency:
   group: macOS-${{ github.head_ref }}
   cancel-in-progress: true
@@ -17,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1]
+        scala: [3, "3-next"]
         gc: [immix]
         include:
           - scala: 3.1.3
@@ -33,15 +32,7 @@ jobs:
       - name: Test runtime
         run: >
           export SCALANATIVE_GC=${{matrix.gc}} &&
-          sbt ++${{matrix.scala}}
-          "test-runtime ${{matrix.scala}}"
-
-      - name: Test partests infrastructure
-        # No partests support for Scala 3
-        if: ${{ !startsWith(matrix.scala, '3.') }}
-        run: >
-          sbt ++${{matrix.scala}}
-          "scalaPartestTests${{env.project-version}}/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
+          sbt "test-runtime ${{matrix.scala}}"
 
   run-scripted-tests:
     name: Scripted tests
@@ -49,7 +40,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.1.3]
+        scala: [3, "3-next"]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/macos-setup-env
