--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -4,8 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - main
-      - 0.4.x
+      - dotty-experimental
 concurrency:
   group: windows-${{ github.head_ref }}
   cancel-in-progress: true
@@ -18,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [3.2.1]
+        scala: [3, "3-next"]
         gc: [boehm, immix, commix]
         include:
           - scala: 3.1.3
@@ -42,13 +41,12 @@ jobs:
           set SCALANATIVE_INCLUDE_DIRS=${{steps.setup.outputs.vcpkg-dir}}\include&
           set SCALANATIVE_LIB_DIRS=${{steps.setup.outputs.vcpkg-dir}}\lib&
           set SCALANATIVE &
-          sbt ++${{matrix.scala}}
+          sbt 
           sandbox${{env.project-version}}/run
           testsJVM${{env.project-version}}/test
           tests${{env.project-version}}/test
           testsExt${{env.project-version}}/test
           testsExtJVM${{env.project-version}}/test
-          "scalaPartestTests${{env.project-version}}/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
         shell: cmd
 
       - name: Test runtime
@@ -58,9 +56,7 @@ jobs:
           set SCALANATIVE_INCLUDE_DIRS=${{steps.setup.outputs.vcpkg-dir}}\include&
           set SCALANATIVE_LIB_DIRS=${{steps.setup.outputs.vcpkg-dir}}\lib&
           set SCALANATIVE &
-          sbt ++${{matrix.scala}}
-          "test-runtime ${{matrix.scala}}"
-          "scalaPartestTests${{env.project-version}}/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
+          sbt "test-runtime ${{matrix.scala}}"
         shell: cmd
 
   run-scripted-tests:
@@ -70,7 +66,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [3.1.3]
+        scala: [3, "3-next"]
     steps:
       # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
       - name: Setup git config
@@ -81,7 +77,7 @@ jobs:
           scala-version: ${{matrix.scala}}
 
       - name: Test scripted
-        run: sbt "++${{matrix.scala}}" "test-scripted ${{matrix.scala}}"
+        run: sbt "test-scripted ${{matrix.scala}}"
         shell: cmd
 
   test-runtime-lto:
@@ -90,7 +86,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [3.2.1]
+        scala: [3, "3-next"]
         build-mode: [release-fast]
         lto: [thin]
         optimize: [true]
@@ -118,7 +114,7 @@ jobs:
           set SCALANATIVE_LIB_DIRS=${{steps.setup.outputs.vcpkg-dir}}\lib&
           set SCALANATIVE_CI_NO_DEBUG_SYMBOLS=true&
           set SCALANATIVE &
-          sbt ++${{matrix.scala}}
+          sbt 
           tests${{env.project-version}}/test
           testsExt${{env.project-version}}/test
         shell: cmd
