--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -80,7 +80,7 @@ jobs:
       matrix:
         arch: [linux-arm64, linux-x86]
         scala: [2.13.10, 3.2.1]
-        build-mode: [debug, release-fast]
+        build-mode: [debug, release-fast, release-size]
         lto: [none, thin]
         gc: [boehm, immix, commix]
         exclude:
@@ -91,6 +91,8 @@ jobs:
             arch: linux-x86
           # Release without LTO produces 1 big file taking long to compile, especially when emulated
           - build-mode: release-fast
+            lto: none
+          - build-mode: release-size
             lto: none
           - build-mode: debug
             lto: thin
@@ -109,6 +111,8 @@ jobs:
             scala: 3.2.0
           - gc: boehm
             build-mode: release-fast
+          - gc: boehm
+            build-mode: release-size
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/linux-setup-env
@@ -125,8 +129,10 @@ jobs:
         # Following envs CROSS_ are always present in docker container
         run: |
           buildMode=${{matrix.build-mode}}
-          if [[ "$buildMode" == "release-fast" ]]; then 
+          if [[ "$buildMode" == "release-fast" ]]; then
             buildMode=releaseFast
+          elif [[ "$buildMode" == "release-size" ]]; then
+            buildMode=releaseSize
           fi
 
           SetConfigTemplate=$(cat << EOM
