--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -64,7 +64,7 @@ jobs:
       fail-fast: false
       matrix:
         scala: [3.2.1, 2.13.10]
-        build-mode: [debug, release-fast]
+        build-mode: [debug, release-fast, release-size]
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
@@ -79,11 +79,17 @@ jobs:
           - scala: 2.12.17
             build-mode: release-fast
             gc: commix
+          - scala: 2.12.17
+            build-mode: release-size
+            gc: commix
           - scala: 3.1.3
             build-mode: debug
             gc: immix
           - scala: 3.1.3
             build-mode: release-fast
+            gc: commix
+          - scala: 3.1.3
+            build-mode: release-size
             gc: commix
     steps:
       - uses: actions/checkout@v3
