--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -134,3 +134,48 @@ jobs:
           tests${{env.project-version}}/test
           testsExt${{env.project-version}}/test
         shell: cmd
+
+  test-runtime-size-lto:
+    name: Test LTO
+    runs-on: windows-2019
+    strategy:
+      fail-fast: false
+      matrix:
+        scala: [3.2.1, 2.13.10]
+        build-mode: [release-size]
+        lto: [thin]
+        optimize: [true]
+        include:
+          - scala: 3.2.1
+            lto: full
+            optimize: true
+          - scala: 2.13.10
+            lto: full
+            optimize: true
+          - scala: 2.12.17
+            lto: full
+            optimize: false
+    steps:
+      # Disable autocrlf setting, otherwise scalalib patches might not be possible to apply
+      - name: Setup git config
+        run: git config --global core.autocrlf false
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/windows-setup-env
+        id: setup
+        with:
+          scala-version: ${{matrix.scala}}
+
+      - name: Test runtime
+        run: >
+          set SCALANATIVE_GC=immix&
+          set SCALANATIVE_MODE=release-size&
+          set SCALANATIVE_OPTIMIZE=${{matrix.optimize}}&
+          set SCALANATIVE_LTO=${{matrix.lto}}&
+          set SCALANATIVE_INCLUDE_DIRS=${{steps.setup.outputs.vcpkg-dir}}\include&
+          set SCALANATIVE_LIB_DIRS=${{steps.setup.outputs.vcpkg-dir}}\lib&
+          set SCALANATIVE_CI_NO_DEBUG_SYMBOLS=true&
+          set SCALANATIVE &
+          sbt ++${{matrix.scala}}
+          tests${{env.project-version}}/test
+          testsExt${{env.project-version}}/test
+        shell: cmd
