--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -64,7 +64,7 @@ jobs:
       fail-fast: false
       matrix:
         scala: [3.2.2, 2.13.10]
-        build-mode: [debug, release-fast, release-size]
+        build-mode: [debug, release-fast]
         gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
